; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/extr_speex.c_Packetize.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/extr_speex.c_Packetize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32**)* @Packetize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @Packetize(i32* %0, i32** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  %6 = load i32**, i32*** %5, align 8
  %7 = icmp eq i32** %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i32* null, i32** %3, align 8
  br label %13

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = load i32**, i32*** %5, align 8
  %12 = call i32* @DecodeBlock(i32* %10, i32** %11)
  store i32* %12, i32** %3, align 8
  br label %13

13:                                               ; preds = %9, %8
  %14 = load i32*, i32** %3, align 8
  ret i32* %14
}

declare dso_local i32* @DecodeBlock(i32*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
